--- a/themes/lyon-theme/layout/pages/start-a-je.ejs
+++ b/themes/lyon-theme/layout/pages/start-a-je.ejs
@@ -10,7 +10,7 @@
     <span class="extra-larger">And go on a Journey</span>
     <span class="larger"><br>of Growth & Impact</span>
   </h3>
-  <button class="learn-more" onclick="smoothScroll('top-cta');">
+  <button class="learn-more u-button" onclick="smoothScroll('top-cta');">
     Learn More<br>
     <svg viewBox="0 0 32 32" width="16" height="16" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2">
       <path d="M30 12 L16 24 2 12" />
