--- a/themes/lyon-theme/layout/pages/map.ejs
+++ b/themes/lyon-theme/layout/pages/map.ejs
@@ -1,7 +1,7 @@
 <div id="modal" style="font-family: 'Open Sans', sans-serif; display: table; width: 100%; height: 100%; position: fixed; z-index: 9; background-color: #323232; background-color: rgba(0,0,0,0.6)">
   <div id="modal-area" style="display: table-cell; vertical-align: middle;">
-    <div style="width: 80%; max-width: 360px; height: 80%; max-height: 480px; margin: 0 auto; position: relative; overflow: hidden; box-sizing: border-box; border-radius: 6px; background-color: #f2f2f2; box-shadow: 0px 6px 18px 0px rgba(0,0,0,0.7);">
-      <button style="font-size: 38px; position: absolute; top: 3px; right: 10px; color: #757575; background-color: transparent; border: none; z-index: 9" onclick="document.getElementById('modal').style.display = 'none';">×</button>
+    <div style="width: 80%; max-width: 360px; max-height: 480px; margin: 0 auto; position: relative; overflow: hidden; box-sizing: border-box; border-radius: 6px; background-color: #f2f2f2; box-shadow: 0px 6px 18px 0px rgba(0,0,0,0.7); height: 80%; height: 80vh; ">
+      <button style="font-size: 38px; position: absolute; top: -6px; right: 10px; color: #757575; background-color: transparent; border: none; z-index: 9; font-weight: bold;" onclick="document.getElementById('modal').style.display = 'none';">×</button>
       <div style="overflow-y: auto; position: absolute; height: 100%; width: 100%; box-sizing: border-box; padding: 42px 24px 84px 24px;">
         <center><svg id="i-location" viewBox="-8 0 48 41" width="96" height="82" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1">
           <circle cx="16" cy="11" r="4" stroke="#24a1c8"/>
