--- a/themes/lyon-theme/layout/pages/map.ejs
+++ b/themes/lyon-theme/layout/pages/map.ejs
@@ -91,7 +91,7 @@
             <p>Filter by location:</p>
             <select id="country-filter" onclick="colorIfSelected(this);">
               <option value="">-- Any country --</option>
-              
+
             </select>
           </div>
         </div>
@@ -178,7 +178,7 @@
   </div>
   <div class="je-benchmarking">
     <div id="je-benchmarking-contact"></div>
-    <div class="powered-by">JE info powered by <a href="https://junior-connect.com/"><img src="assets/juniorconnect.png"> JuniorConnect</a></div>
+    <div class="powered-by">JE info powered by <a href="https://junior-connect.com/"><img src="assets/logos/juniorconnect.png"> JuniorConnect</a></div>
   </div>
 </div>
 <!-- Map -->
