--- a/themes/lyon-theme/layout/pages/map.ejs
+++ b/themes/lyon-theme/layout/pages/map.ejs
@@ -178,7 +178,10 @@
   </div>
   <div class="je-benchmarking">
     <div id="je-benchmarking-contact"></div>
-    <div class="powered-by">JE info powered by <a href="https://junior-connect.com/"><img src="assets/logos/juniorconnect.png"> JuniorConnect</a></div>
+    <div class="powered-by">
+      <p>JE info powered by <a href="https://junior-connect.com/"><img src="/assets/logos/juniorconnect.png"> JuniorConnect</a></p>
+      <p><a href="/insights/how-to-add-your-je-to-the-global-je-map/">Are you from this Junior Enterprise? Click here to discover how to complete or update your profile</a></p>
+    </div>
   </div>
 </div>
 <!-- Map -->
