--- a/themes/lyon-theme/layout/pages/map.ejs
+++ b/themes/lyon-theme/layout/pages/map.ejs
@@ -178,9 +178,15 @@
   </div>
   <div class="je-benchmarking">
     <div id="je-benchmarking-contact"></div>
+  </div>
+  <div class="je-benchmarking dark">
     <div class="powered-by">
       <p>JE info powered by <a href="https://junior-connect.com/"><img src="/assets/logos/juniorconnect.png"> JuniorConnect</a></p>
-      <p><a href="/insights/how-to-add-your-je-to-the-global-je-map/">Are you from this Junior Enterprise? Click here to discover how to complete or update your profile</a></p>
+      <p>
+        <b>Are you from this Junior Enterprise?</b>
+        <br>
+        <a href="/insights/how-to-add-your-je-to-the-global-je-map/">Click here to discover how to complete or update your JE's profile</a>
+      </p>
     </div>
   </div>
 </div>
