--- a/themes/lyon-theme/layout/pages/map.ejs
+++ b/themes/lyon-theme/layout/pages/map.ejs
@@ -61,37 +61,12 @@
             <p>Filter by field of work:</p>
             <select id="field-filter" onclick="colorIfSelected(this);">
               <option value="">-- Any field --</option>
-              <option value="agro">Agronomy, Agroindustry or Zootechny</option>
-              <option value="biz">Business, Market or International Relations</option>
-              <option value="chem">Chemistry or Pharmacy</option>
-              <option value="civ">Civil or Architecture</option>
-              <option value="comm">Communication or Journalism</option>
-              <option value="comp">Computing or Information Technology</option>
-              <option value="des">Design</option>
-              <option value="elec">Electrical, Electronics, Automation or Energy</option>
-              <option value="env">Environmental, Ecology, Biology or Aquaculture</option>
-              <option value="fin">Finance or Accounting</option>
-              <option value="food">Food or Nutrition</option>
-              <option value="geo">Geology, Geography or Geophysics</option>
-              <option value="hr">Human Resources or Psychology</option>
-              <option value="law">Law</option>
-              <option value="mgmt">Management (Internal or Production)</option>
-              <option value="mkt">Marketing</option>
-              <option value="mech">Mechanics, Materials, Naval or Aerospace</option>
-              <option value="med">Medicine or Hospital Management</option>
-              <option value="min">Mining, Oil or Gas</option>
-              <option value="phys">Physical Education</option>
-              <option value="pub">Public Management or Political/Social Sciences</option>
-              <option value="stat">Statistics or Mathematics</option>
-              <option value="tour">Tourism or Translations</option>
-              <option value="vid">Video Production or Cinema</option>
             </select>
           </div>
           <div class="grid-item">
             <p>Filter by location:</p>
             <select id="country-filter" onclick="colorIfSelected(this);">
               <option value="">-- Any country --</option>
-
             </select>
           </div>
         </div>
@@ -164,8 +139,6 @@
       <div id="je-field"></div>
       <h3 class="je-subtitle" id="parent-subtitle"></h3>
       <div id="je-parent"></div>
-      <h3 class="je-subtitle" id="awards-subtitle"></h3>
-      <div id="je-awards"></div>
       <h3 class="je-subtitle" id="stats-subtitle"></h3>
       <div id="je-stats"></div>
       <h3 class="je-subtitle" id="services-subtitle"></h3>
@@ -181,11 +154,11 @@
   </div>
   <div class="je-benchmarking dark">
     <div class="powered-by">
-      <p>JE info powered by <a href="https://junior-connect.com/"><img src="/assets/logos/juniorconnect.png"> JuniorConnect</a></p>
+      <p>JE info powered by <a href="https://junior-connect.com/" target="_blank"><img src="/assets/logos/juniorconnect.png"> JuniorConnect</a></p>
       <p>
         <b>Are you from this Junior Enterprise?</b>
         <br>
-        <a href="/insights/how-to-add-your-je-to-the-global-je-map/">Click here to discover how to complete or update your JE's profile</a>
+        <a href="/insights/how-to-add-your-je-to-the-global-je-map/" target="_blank">Click here to discover how to complete or update your JE's profile</a>
       </p>
     </div>
   </div>
