--- a/themes/lyon-theme/layout/layout.ejs
+++ b/themes/lyon-theme/layout/layout.ejs
@@ -32,7 +32,6 @@
     <!-- Scripts -->
       <% if( page.title == 'Map' ){ %>
         <script src="/assets/map-scripts.js"></script>
-        <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTHGNgA3nZ9AY5dSIhjOdiU-vS7k_iUkw&callback=initMap"></script>
         <script defer src="https://cdnjs.cloudflare.com/ajax/libs/fuse.js/3.0.4/fuse.min.js"></script>
       <% } else { %>
         <script defer src="/assets/scripts.js"></script>
@@ -66,5 +65,9 @@
       <%- partial('partial/start-a-je-modals')%>
     <% } %>
 
+    <% if( page.title == 'Map' ){ %>
+      <!-- Closing Scripts -->
+      <script defer src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDTHGNgA3nZ9AY5dSIhjOdiU-vS7k_iUkw&callback=initMap"></script>
+    <% } %>
   </body>
 </html>
