--- a/themes/lyon-theme/layout/pages/map.ejs
+++ b/themes/lyon-theme/layout/pages/map.ejs
@@ -18,7 +18,7 @@
         <input type="checkbox" id="dont-show" onkeyup="if(event.keyCode===13){this.click();}">
         Don't show this again
       </label>
-      <a href="#" class="modal-btn" style="position: absolute; width: 100%; text-decoration: none; padding: 12px 18px; box-sizing: border-box; font-size: 20px; bottom: 0; left: 0; text-align: center;" onclick="document.getElementById('modal').style.display = 'none'; setCookie('dont-show');">Go to map</a>
+      <a href="#" class="modal-btn" style="position: absolute; width: 100%; text-decoration: none; padding: 12px 18px; box-sizing: border-box; font-size: 20px; bottom: 0; left: 0; text-align: center;" onclick="document.getElementById('modal').style.display = 'none'; setCookie('dont-show');">Ok! Go to map</a>
     </div>
   </div>
   <script>
