--- a/themes/lyon-theme/layout/layout.ejs
+++ b/themes/lyon-theme/layout/layout.ejs
@@ -17,9 +17,9 @@
       <% } %>
     <!-- Open Graph -->
       <% if( page.featured_image ){ %>
-        <%- open_graph({ type: 'article', image: page.featured_image }) %>
+        <%- open_graph({ type: 'blog', image: page.featured_image }) %>
       <% } else { %>
-        <%- open_graph({ type: 'article' }) %>
+        <%- open_graph({ type: 'blog' }) %>
       <% } %>
     <!-- CSS Styles -->
       <% if( page.title == 'Map' ){ %>
