--- a/themes/lyon-theme/layout/layout.ejs
+++ b/themes/lyon-theme/layout/layout.ejs
@@ -16,6 +16,7 @@
         <meta name="author" content="<%- page.author %>">
       <% } %>
     <!-- Open Graph -->
+      <meta property="fb:app_id" content="1731947456924075">
       <% if( page.featured_image ){ %>
         <%- open_graph({ type: 'blog', image: page.featured_image }) %>
       <% } else { %>
