meta property author

--- a/themes/lyon-theme/layout/layout.ejs
+++ b/themes/lyon-theme/layout/layout.ejs
@@ -13,7 +13,7 @@
         <title><%- page.title %> - <%- config.title %></title>
       <% } %>
       <% if( page.layout == 'post' ){ %>
-        <meta name="author" content="<%- page.author %>">
+        <meta property="author" content="<%- page.author %>">
       <% } %>
     <!-- Open Graph -->
       <meta property="fb:app_id" content="1731947456924075">
