--- a/themes/lyon-theme/layout/pages/map.ejs
+++ b/themes/lyon-theme/layout/pages/map.ejs
@@ -147,6 +147,7 @@
         <br>
         <a href="/insights/how-to-add-your-je-to-the-global-je-map/" target="_blank">Click here to discover how to complete or update your JE's profile</a>
       </p>
+      <p id="jc-access"></p>
     </div>
   </div>
 </div>
