--- a/themes/lyon-theme/layout/home.ejs
+++ b/themes/lyon-theme/layout/home.ejs
@@ -54,9 +54,9 @@
     </div>
     <div class="offset-by-one-third two-thirds column card">
       <section>
-        <h3>The Global Council</h3>
-        <p>Created in 2016, the Junior Enterprise Global Council works to make JEs a truly global and connected movement.</p>
-        <p>We are responsible for the global enlargement of the JE movement and for projects like JEWD, the Exchange Program and the Global Report.</p>
+        <h3>The JE Global Council</h3>
+        <p>Since 2016, we exist to strengthen the Junior Enterprise Global Network towards delivering more impact.</p>
+        <p>Our role is to enlarge the network, by working and partnering for the creation of JEs & confederations in new countries, and to develop it, through support & connection initiatives.</p>
         <div class="primary link"><a href="/global-council">Learn more</a></div>
         <div class="primary link"><a href="/partners">Become a partner</a></div>
       </section>
