--- a/themes/lyon-theme/layout/partial/confederation-card.ejs
+++ b/themes/lyon-theme/layout/partial/confederation-card.ejs
@@ -4,8 +4,8 @@
       </div>
       <div class="seven columns u-center">
         <h5><%- confederation.title %></h5>
-        <% if ( confederation.type == 'consultative-member' ) { %>
-          <p>Consultative Member</p>
+        <% if ( confederation.type == 'observer' ) { %>
+          <p>Observer</p>
         <% } else { %>
           <p><%- confederation.no_of_JEs %>+ JEs</p>
         <% } %>
