--- a/themes/lyon-theme/layout/pages/global-council.ejs
+++ b/themes/lyon-theme/layout/pages/global-council.ejs
@@ -11,12 +11,12 @@
     <div class="row">
       <div class="two-thirds column">
         <p>The <b>Junior Enterprise Global Council</b> is the International Organization that represents the Junior Enterprise Movement Worldwide.</p>
-        <p>We are currently composed by <a href="/confederations">8 confederations</a> which represent a total of 20 countries, all united in the Council with the following mission:</p>
-        <blockquote>To be a truly global and connected movement, by improving our results via increased cooperation.</blockquote>
+        <p>We are currently composed by <a href="/confederations">18 confederations</a> which represent a total of 16 countries, all united in the Council with the following mission:</p>
+        <blockquote>Strengthen the Junior Enterprise Global Network towards boosting educational, economical and collaborative impact.</blockquote>
         <p>Since the confederations already represent JEs on a national or continental level, our work is focused on global aspects of the network.</p>
       </div>
       <div class="u-750-vcenter offset-by-two-thirds one-third column">
-        <img src="/assets/images/confederations.jpg" alt="Confederation Logos">
+        <img src="/assets/logos/jegc-logo.png" alt="JEGC Logo">
       </div>
     </div>
   </section>
