--- a/themes/lyon-theme/layout/pages/global-council.ejs
+++ b/themes/lyon-theme/layout/pages/global-council.ejs
@@ -60,13 +60,13 @@
       <div class="team-member">
         <img src="/assets/team/kalil-el-kadri.jpg">
         <h5>Kalil El Kadri</h5>
-        <p>Head of Strategy & Partnerships</p>
+        <p>Secretary General</p>
         <p><a href="mailto:kalil.monteiro@brasiljunior.org.br">kalil.monteiro@brasiljunior.org.br</a></p>
       </div>
       <div class="team-member">
         <img src="/assets/team/lucas-mantovani.jpg">
         <h5>Lucas Mantovani</h5>
-        <p>Head of Operations</p>
+        <p>Head of Development</p>
         <p><a href="mailto:lucas.mantovani@brasiljunior.org.br">lucas.mantovani@brasiljunior.org.br</a></p>
       </div>
       <div class="team-member">
