--- a/themes/lyon-theme/layout/pages/global-council.ejs
+++ b/themes/lyon-theme/layout/pages/global-council.ejs
@@ -33,11 +33,6 @@
     <h3 class="u-mt0">What we do</h3>
     <div class="deck">
       <div class="vertical card">
-        <h4>Alignment</h4>
-        <p>Promotion of the <b>International Standards</b>, ensuring JEs follow the JE concept.</p>
-        <p>Production of the <b>Global Report</b>, giving to the JE network insights about where we are and where we're going.</p>
-      </div>
-      <div class="vertical card">
         <h4>Enlargement</h4>
         <p>Partnerships and programs to <b>stimulate the creation</b> of JEs.</p>
         <p><b>Support for JE and Confederation initiatives</b> in more than 20 countries around the world.</p>
@@ -47,6 +42,7 @@
         <p>Support for the <b>newer confederations</b>.</p>
         <p><b>Connection programs</b> to increase collaboration in the network.</p>
         <p>Communication initiatives to promote <b>global knowledge</b>.</p>
+        <p>Promotion of the International Standards & Global Report.</p>
       </div>
     </div>
   </div>
