--- a/themes/lyon-theme/layout/pages/confederations.ejs
+++ b/themes/lyon-theme/layout/pages/confederations.ejs
@@ -17,7 +17,7 @@
   </section>
   <section>
     <h3>The network</h3>
-    <p>The following confederations are part of the <a href="/global-council">Junior Enterprise Global Council</a>:</p>
+    <p>The following confederations are part of <a href="/je-global">Junior Enterprises Global</a>:</p>
     <div class="deck">
       <% site.posts.forEach(function(confederation){ %>
         <% if(confederation.type=='confederation'){ %>
